--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ img {
 .checklist-container {
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 75vh;
+  height: 78vh;
   width: 100%;
   background-color: var(--primary-fg-color);
   padding: 1em 1.5em;
@@ -396,13 +396,13 @@ img {
     padding: 0 5em;
   }
 
-  .navbar-search {
+  /* .navbar-search {
     display: flex;
     align-items: center;
     background-color: #282e3e;
     border-radius: 4px;
     width: 300px;
-  }
+  } */
 
   .tabs__container {
     display: block;
